@@ -9,6 +9,7 @@ Engine fixes:
 
 * Fix bug where items could be dragged from the vendor window and dropped in the opposite vendor tab.
 * Fix bug that caused item max_quantity to be reset when attempting to append an item definition.
+* Fix bug where Powers with 'replace_by_effect' would still use properties from the parent power, such as animation state.
 
 Game updates:
 
